@@ -6,6 +6,13 @@ Die besten Zeiten für Posten {{ posten.name }}:
   <tr>
     <th>Gruppe</th>
     <th>Schiff</th>
+    <th>
+    {% if request.GET.orderByStnr %}
+    <a href="{% url richtzeit wettkampf.jahr, wettkampf.name, disziplin.name, posten.name %}">Stnr</a>
+    {% else %}
+    <a href="{% url richtzeit wettkampf.jahr, wettkampf.name, disziplin.name, posten.name %}?orderByStnr=1">Stnr</a>
+    {% endif %}
+    </th>
     <th>Fahrtrupp</th>
     <th class="zeit">Zeit</th>
     <th class="note">Note</th>
@@ -14,6 +21,7 @@ Die besten Zeiten für Posten {{ posten.name }}:
   <tr class="{% cycle 'odd' 'even' %}">
     <td><a href="{% url sektionsfahren_gruppe_get wettkampf.jahr, wettkampf.name, row.gruppe %}">{{ row.gruppe }}</a></td>
     <td class="rang">{{ row.schiff }}</td>
+    <td class="rang">{{ row.startnummer_calc|default_if_none:"" }}</td>
     <td>
         {{ row.ft1_steuermann }} / {{ row.ft1_vorderfahrer }}<br/>
         {{ row.ft2_steuermann }} / {{ row.ft2_vorderfahrer }}
